# SQL-Agent

./: .gitignore  PRD.md  README.md  pyproject.toml  requirements.txt
metadata/: schema_metadata.yaml
src/: main.py
src/agents/: graph.py  nodes.py  state.py
src/core/: database.py  knowledge.py  retriever.py
src/utils/: config.py
